updated index, style files and images folder

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="vase-container">
             <figure class="vase-figure">
                 <div class="vase-image">
-                <img src="./images/image1.png" alt=""> 
+                <img src="./images/image1.jpg" alt=""> 
                      <p  class="new">NEW</p>
                      <p class="percentage">-15%</p>
                     </div>
@@ -176,14 +176,103 @@
             <p >Shopping benefits to buy on our site.</p>
 
         </div>
-        <div>
-
+        <div class="icon">
+            <div class="all-icons">
+                <svg viewBox="0 0 48 48" xml:space="preserve" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M30.121 13.673a3.835 3.835 0 0 1-3.295-4.035 3.826 3.826 0 0 1 1.283-2.656 3.842 3.842 0 0 1 2.785-.972c.313.022.514-.195.526-.471a.497.497 0 0 0-.471-.527c-.065-.004-.129.009-.195.008-.026-.004-.053-.016-.08-.016h-13.35c-.027 0-.051.011-.076.015-.067.001-.133-.011-.201-.007a.503.503 0 0 0-.471.527c.015.275.221.493.527.471a3.826 3.826 0 0 1 4.035 3.294 3.859 3.859 0 0 1-3.263 4.368 7.267 7.267 0 0 0-5.815 4.769c-2.933 8.251-1.313 17.588 4.226 24.371a.509.509 0 0 0 .39.184h14.649c.15 0 .291-.068.387-.184 5.539-6.781 7.158-16.12 4.225-24.371a7.265 7.265 0 0 0-5.816-4.768zm.967 28.323H16.914c-5.199-6.498-6.699-15.371-3.91-23.219a6.272 6.272 0 0 1 5.021-4.114 4.86 4.86 0 0 0 4.106-5.501 4.831 4.831 0 0 0-1.862-3.157h7.493c-.104.08-.219.144-.318.232a4.82 4.82 0 0 0-1.614 3.346 4.828 4.828 0 0 0 4.147 5.081 6.276 6.276 0 0 1 5.021 4.114c2.787 7.847 1.287 16.722-3.91 23.218z"
+                        fill="#FAEDED" class="fill-000000"></path>
+                </svg>
+            </div>
+            <div class="all-icons">
+                <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
+                    <g data-name="Layer 12">
+                        <path
+                            d="m25.41 7.09-9-4a1 1 0 0 0-.82 0l-9 4A1 1 0 0 0 6 8v8.56A8.69 8.69 0 0 0 8.91 23l6.43 5.71a1 1 0 0 0 1.32 0L23.09 23A8.69 8.69 0 0 0 26 16.56V8a1 1 0 0 0-.59-.91ZM24 16.56a6.67 6.67 0 0 1-2.24 5L16 26.66l-5.76-5.12a6.67 6.67 0 0 1-2.24-5V8.65l8-3.56 8 3.56Z"
+                            fill="#F7F4F4" class="fill-000000"></path>
+                </svg>
+            </div>
+            <div class="all-icons">
+                <svg fill="none" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M2 6.75A2.75 2.75 0 0 1 4.75 4h10.5A2.75 2.75 0 0 1 18 6.75v6.5A2.75 2.75 0 0 1 15.25 16H4.75A2.75 2.75 0 0 1 2 13.25v-6.5ZM3 10v3.25c0 .966.784 1.75 1.75 1.75H7v-4.293l-1.646 1.647a.5.5 0 0 1-.708-.708L6.293 10H3Zm1.268-1A2 2 0 0 1 7 6.268V5H4.75A1.75 1.75 0 0 0 3 6.75V9h1.268ZM6 9h1V8a1 1 0 1 0-1 1Zm2-1v1h1a1 1 0 1 0-1-1Zm2.732 1H17V6.75A1.75 1.75 0 0 0 15.25 5H8v1.268A2 2 0 0 1 10.732 9Zm-2.025 1 1.647 1.646a.5.5 0 0 1-.708.708L8 10.707V15h7.25A1.75 1.75 0 0 0 17 13.25V10H8.707Z"
+                        fill="#F5E7E7" class="fill-212121"></path>
+                </svg>
+            </div>
+            <div class="all-icons">
+                <svg viewBox="0 0 700 700" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M416 320h-96c-17.62 0-32-14.38-32-32s14.38-32 32-32h96s96-107 96-160-43-96-96-96-96 43-96 96c0 25.5 22.27 63.38 45.27 96H320c-52.88 0-96 43.12-96 96s43.13 96 96 96h96c17.62 0 32 14.38 32 32s-14.38 32-32 32H185.5c-16 24.75-33.75 47.75-47.25 64H416c52.88 0 96-43.13 96-96s-43.1-96-96-96zm0-256c17.75 0 32 14.25 32 32s-14.25 32-32 32-32-14.25-32-32 14.2-32 32-32zM96 256c-53 0-96 43-96 96s96 160 96 160 96-107 96-160-43-96-96-96zm0 128c-17.75 0-32-14.25-32-32s14.25-32 32-32 32 14.25 32 32-14.2 32-32 32z"
+                        fill="#FAF5F5" class="fill-000000"></path>
+                </svg>
+            </div>
         </div>
         <div class="test">
             <h1>REVIEWS & TESTIMONIALS</h1>
             <p >Encourage you to share your opinions</p>
 
         </div>
+            <div class="last-vase-container">
+                <div class="image">
+                    <img src="images/image5.jpg" alt="">
+                </div>
+                <div class="image-right">
+                    <div class="person">
+                        <img src="images/image6.jpg" alt="">
+                        <p class="name">Arther Parker</p>
+                    </div>
+    
+                    <div class="lst-vase-division">
+                        <p class="service">
+                            <span>
+                            </span>
+                            "The pieces have added a distinctive look and special  atmosphere to the living room, it makes you feel like you  have changed the appearance of the entire house."
+                            <span>
+                            </span>
+                        </p>
+                        <div class="next">
+                            <p class="">(1,3)</p>
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </div>
+                    </div>
+                </div>
+        </div>
+        <footer>
+            <div class="top-footer">
+            <div>
+                <h2>CUSTOMER SERVICE</h2>
+                <p>Help & Contact Us</p>
+                <p>Returns & Refunds </p>
+                <p>ONLINE Store</p>
+                <p>Terma & Conditions</p>
+            </div>
+            <div>
+                <h2>COMPANY</h2>
+                <p>What We Do</p>
+                <p>Available Services</p>
+                <p>Latest Posts</p>
+                <p>FAQs</p>
+            </div>
+            <div>
+                <h2>SOCIAL MEDIA</h2>
+                <p>Twitter</p>
+                <p>Instagram</p>
+                <p>Facebook</p>
+                <p>Pinerset</p>
+            </div>
+            <div>
+                <h2>PROFILE</h2>
+                <p>My Account</p>
+                <p>Checkout</p>
+                <p>Order Tracking</p>
+                <p>Help & Support</p>
+            </div>
+        </div>
+            <div class="bottom-footer">
+                <p>All Right Reserved &copy; Copyright</p>
+                <p>Carracompany.com</p>
+            </div>
+            </footer>
         </div>
 </body>
 </html>
