--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <div class="main-container">
-        <div class="feature">
+        <header>
+        <div class="feature" >
             <div class="shape">
                 <div class="shape1"></div>
                 <div class="shape2"></div>
@@ -44,7 +45,7 @@
             </svg>
         </div>
         <div class="nav">
-            <div id="carra"> CARRA</div>
+            <div class="carra"> CARRA</div>
             <nav class="links">
                 <a href="#">HOME</a>
                 <a href="#">CATEGORIES</a>
@@ -53,8 +54,9 @@
                 <a href="#">CONTACT</a>
             </nav>
         </div>
-        <div class="image-container"> <img src="images/image.png" alt="tree image"> </div>
+        </header>
         <div class="heading">
+            <div>
             <p>ELEVATE YOUR SPACE & EXPRESS YOUR STYLE</p>
             <h1>WHERE EVERY <br> DETAIL SPEAKS <br> OF <span class="home">HOME</span></h1>
             <div class="start-now">
@@ -64,7 +66,6 @@
                     </svg>
                 <p> Watch Video</p>
             </div>
-        </div>
 
         <div class="figure-container">
             <div>
@@ -80,12 +81,15 @@
                 <p>Insipired Decoration</p>
             </div>
         </div>
+    </div>
+        <div class="image-container"> <img src="images/image.png" alt="tree image"> </div>
+    </div>
         <div class="logo-container">
-            <p> IKEA</p>
-            <p> DIPTYQUE</p>
-            <p> DESENIO</p>
-            <P> benuta</P>
-            <p> WESTWINK</p>
+            <p class="ikea"> IKEA</p>
+            <p class="magneta"> DIPTYQUE</p>
+            <p class="argon"> DESENIO</p>
+            <p class="monsetrate"> WESTWING</p>
+            <P class="agba"> benuta</P>
         </div>
         <div  class="seller">
             <div>
@@ -156,7 +160,7 @@
             </div>
         </div>
         <div class="stylish-decor">
-            <div class="style">
+            <div class="style-pieces">
                 <h6>OFFER ONLINE AND IN-STORE PROMOTIONS</h6>
                 <h1 >STYLISH PIECES <br> DECOR IDEAS</h1>
                 <p>We tapped design to find modern and stylish home <br> decor ideas for living
@@ -176,7 +180,7 @@
             <p >Shopping benefits to buy on our site.</p>
 
         </div>
-        <div class="icon">
+        <div class="icon" >
             <div class="all-icons">
                 <svg viewBox="0 0 48 48" xml:space="preserve" xmlns="http://www.w3.org/2000/svg">
                     <path
