--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
             <p class="ikea"> IKEA</p>
             <p class="magneta"> DIPTYQUE</p>
             <p class="argon"> DESENIO</p>
-            <p class="monsetrate"> WESTWING</p>
             <P class="agba"> benuta</P>
+            <p class="monsetrate"> WESTWING</p>
         </div>
         <div  class="seller">
             <div>
@@ -180,7 +180,8 @@
             <p >Shopping benefits to buy on our site.</p>
 
         </div>
-        <div class="icon" >
+        <div class="icon">
+            <figure>
             <div class="all-icons">
                 <svg viewBox="0 0 48 48" xml:space="preserve" xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -188,6 +189,12 @@
                         fill="#FAEDED" class="fill-000000"></path>
                 </svg>
             </div>
+            <figcaption>
+                <h3>GUARANTEE 30 DAYS</h3>
+                <p>We will refund or exchange your order</p>
+            </figcaption>
+        </figure>
+        <figure>
             <div class="all-icons">
                 <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
                     <g data-name="Layer 12">
@@ -195,7 +202,13 @@
                             d="m25.41 7.09-9-4a1 1 0 0 0-.82 0l-9 4A1 1 0 0 0 6 8v8.56A8.69 8.69 0 0 0 8.91 23l6.43 5.71a1 1 0 0 0 1.32 0L23.09 23A8.69 8.69 0 0 0 26 16.56V8a1 1 0 0 0-.59-.91ZM24 16.56a6.67 6.67 0 0 1-2.24 5L16 26.66l-5.76-5.12a6.67 6.67 0 0 1-2.24-5V8.65l8-3.56 8 3.56Z"
                             fill="#F7F4F4" class="fill-000000"></path>
                 </svg>
-            </div>
+                </div>
+                <figcaption>
+                    <h3>GUARANTEE 30 DAYS</h3>
+                    <p>We will refund or exchange your order</p>
+                </figcaption>
+            </figure>
+            <figure>
             <div class="all-icons">
                 <svg fill="none" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -203,6 +216,12 @@
                         fill="#F5E7E7" class="fill-212121"></path>
                 </svg>
             </div>
+                <figcaption>
+                    <h3>GIFT CARDS</h3>
+                    <p>Delivered by email and contain instructions.</p>
+                </figcaption>
+            </figure>
+            <figure>
             <div class="all-icons">
                 <svg viewBox="0 0 700 700" xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -210,6 +229,11 @@
                         fill="#FAF5F5" class="fill-000000"></path>
                 </svg>
             </div>
+                <figcaption>
+                    <h3>TRACK ORDER</h3>
+                    <p>You can use our services to track your order </p>
+                </figcaption>
+            </figure>
         </div>
         <div class="test">
             <h1>REVIEWS & TESTIMONIALS</h1>
