--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
             </nav>
         </div>
         </header>
+        <main>
+        <section>
         <div class="heading">
             <div>
             <p>ELEVATE YOUR SPACE & EXPRESS YOUR STYLE</p>
@@ -84,6 +86,8 @@
     </div>
         <div class="image-container"> <img src="images/image.png" alt="tree image"> </div>
     </div>
+</section>
+<section>
         <div class="logo-container">
             <p class="ikea"> IKEA</p>
             <p class="magneta"> DIPTYQUE</p>
@@ -91,6 +95,8 @@
             <P class="agba"> benuta</P>
             <p class="monsetrate"> WESTWING</p>
         </div>
+    </section>
+    <section>
         <div  class="seller">
             <div>
             <p >BEST SELLER:</p>
@@ -100,6 +106,8 @@
                 <i class="fa-solid fa-play"></i>
             </div>
         </div>
+    </section>
+    <section>
         <div class="vase-container">
             <figure class="vase-figure">
                 <div class="vase-image">
@@ -138,11 +146,15 @@
         </figcaption>
     </figure>
         </div>
+    </section>
+    <section>
         <div class="test">
             <h1> RESTYLE YOUR SPACE</h1>
             <p >Give your home a truly customized feel.</p>
 
         </div>
+    </section>
+    <section>
         <div class="trend-home-container">
             <div>
                 <img src="images/image01.png" alt="">
@@ -159,6 +171,8 @@
                 </div>
             </div>
         </div>
+    </section>
+    <section>
         <div class="stylish-decor">
             <div class="style-pieces">
                 <h6>OFFER ONLINE AND IN-STORE PROMOTIONS</h6>
@@ -175,11 +189,15 @@
                 <img src="images/image02.png" alt="">
             </div>
         </div>
+    </section>
+    <section>
         <div class="test">
             <h1> WHAT WE OFFER YOU!</h1>
             <p >Shopping benefits to buy on our site.</p>
 
         </div>
+    </section>
+    <section>
         <div class="icon">
             <figure>
             <div class="all-icons">
@@ -235,11 +253,15 @@
                 </figcaption>
             </figure>
         </div>
+    </section>
+    <section>
         <div class="test">
             <h1>REVIEWS & TESTIMONIALS</h1>
             <p >Encourage you to share your opinions</p>
 
         </div>
+    </section>
+    <section>
             <div class="last-vase-container">
                 <div class="image">
                     <img src="images/image5.jpg" alt="">
@@ -263,6 +285,8 @@
                     </div>
                 </div>
         </div>
+    </section>
+    </main>
         <footer>
             <div class="top-footer">
             <div>
